compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_literal_assignment_str.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() {\n            \"foo\" = false;\n        }"
---
× error[LM4375]: cannot assign value to literal
   ╭───────────
 1 │ fn foo() {
 2 │             "foo" = false;
   │             ^^^^^^^^^^^^^ literal values are constant and cannot be assigned
 3 │         }
   ╰──
