compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_return_value_condition_if.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() -> Int32 {\n        if false {\n            return true;\n        }\n        return 0_i32;\n    }"
---
× error[LM4001]: mismatched types
   ╭───────────
 2 │         if false {
 3 │             return true;
   │                    ^^^^ expected type std::Int32, but found type std::Boolean...
 4 │         }
   ∶ 
 1 │ fn foo() -> Int32 {
   │             ^^^^^^^ ...because of type defined here
 2 │         if false {
   ╰──
   help: expected type std::Int32
            found type std::Boolean
