compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_return_value_inline_comp.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() -> Int32 {\n        return 0_i32;\n    }"
---

